Fixes toast alignment

--- a/src/_toast.scss
+++ b/src/_toast.scss
@@ -15,7 +15,7 @@
 	left: 50px;
 	margin: 0;
 	min-height: ($baseline * 5);
-	padding: 0;
+	padding: 0 20px;
 }
 
 .toast--danger {
@@ -40,6 +40,9 @@
 	margin: 0 0 0 ($unit * 5);
 	text-transform: uppercase;
 
+	position: relative;
+    top: 1px;
+
 	-webkit-transition: color 0.2s;
 	-o-transition: color 0.2s;
 	transition: color 0.2s;
@@ -61,8 +64,8 @@
 }
 
 .toast__spinner {
-	margin: 0 0 0 ($unit*5);
-	top: 9px;
+	margin: 0;
+	top: 7px;
 	color: white;
 	display: inline-block;
 	font-family: "icon-12";
@@ -110,4 +113,13 @@
 .toast--danger .toast__spinner--done:not(:required):before {
 	background: $brand-danger;
 	border-color: $brand-danger;
+}
+
+.toast .close {
+	padding: 0;
+	margin: 0 0 0 20px;
+}
+.toast .close .close__icon {
+	position: relative;
+	top: 2px;
 }
